--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eslint-plugin-markup-replace",
   "version": "6.0.0",
-  "description": "A eslint plugin to process markup",
+  "description": "一个处理后端模板表达式的eslint插件",
   "main": "lib/index.js",
   "directories": {
     "lib": "lib"
